--- a/catalog.html
+++ b/catalog.html
@@ -7,16 +7,19 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Интернет-магазин Техномарт</title>
   <link rel="stylesheet" href="css/normalize.css" />
-  <link rel="stylesheet" href="css/style.css" />
-  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=latin,cyrillic" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400italic,700&amp;subset=latin,cyrillic" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="css/min-style.css" />
+  <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=latin,cyrillic" rel="stylesheet"
+    type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400italic,700&amp;subset=latin,cyrillic"
+    rel="stylesheet" type="text/css">
 </head>
 
 <body class="main-page">
   <header class="header-page">
     <section class="header-top">
       <div class="container flex">
-        <a href='index.html' class="shop-logo"><img src="img/logo-technomart.svg" alt="Логотип «Техномарт»" width="109" height="19"></a>
+        <a href='index.html' class="shop-logo"><img src="img/logo-technomart.svg" alt="Логотип «Техномарт»" width="109"
+            height="19"></a>
         <h1 class="incognito">Интернет-магазин Техномарт</h1>
         <div class="search-block">
           <form class="header-search">
@@ -41,24 +44,24 @@
         </div>
         <div class="contacts-title">
           <div class="phone-container">
-          <p class="phone-number">+7 (812) 555-05-55</p>
-        </div>
+            <p class="phone-number">+7 (812) 555-05-55</p>
+          </div>
           <p class="header-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </div>
         <div class="user-block-profile">
-            <a class="user-profile">Равшан Джамшутович</a>
-            <article>
-              <h2 class="incognito">Блок с заказами и личным кабинетом</h2>
+          <a class="user-profile">Равшан Джамшутович</a>
+          <article>
+            <h2 class="incognito">Блок с заказами и личным кабинетом</h2>
             <div class="user-control">
-            <a class="my-orders">Мои заказы</a>
-            <span class="point"></span>
-            <a class="my-profile">Личный кабинет</a>
-          </div>
+              <a class="my-orders">Мои заказы</a>
+              <span class="point"></span>
+              <a class="my-profile">Личный кабинет</a>
+            </div>
           </article>
-          </div>
         </div>
+      </div>
     </section>
-    <section class="lower-header">
+    <section class="lower-header-catalog">
       <h2 class="incognito">Верхняя навигация по сайту</h2>
       <div class="container">
         <nav class="header-bottom">
@@ -76,8 +79,9 @@
     </section>
   </header>
   <main>
+    <section class="main-catalog-section">
     <div class="container">
-      <ul class="breadcrumbs-list">
+      <ul class="breadcrumbscatalog">
         <li><a href="index.html"><img src="img/icon-home.svg" alt="Иконка домой" width="14" height="12"></a></li>
         <li><a href="#">Каталог</a></li>
         <li><a href="#">Инструмент</a></li>
@@ -111,7 +115,7 @@
               </div>
             </fieldset>
           </form>
-          <hr class="line">
+          <hr class="line-1">
           <form class="filter" method="get" action="https://echo.htmlacademy.ru">
             <fieldset class="first-filter">
               <legend class="filter-sort">Производители:</legend>
@@ -129,8 +133,7 @@
                   </label>
                 </li>
                 <li class="manufacturers-option">
-                  <input type="checkbox" name="makita" id="makita" checked
-                  class="incognito filter-input-checkbox">
+                  <input type="checkbox" name="makita" id="makita" checked class="incognito filter-input-checkbox">
                   <label for="makita">
                     Makita
                   </label>
@@ -149,12 +152,13 @@
                 </li>
               </ul>
             </fieldset>
-            <hr class="line">
+            <hr class="line-2">
             <fieldset class="second-filter">
-              <legend class="filter-sort">Питание:</legend>
+              <legend class="filter-sort-3">Питание:</legend>
               <ul class="nutrition">
                 <li class="manufacturers-option">
-                  <input type="radio" name="pitanie" value="accum" id="accum" class="incognito filter-input-radio" checked>
+                  <input type="radio" name="pitanie" value="accum" id="accum" class="incognito filter-input-radio"
+                    checked>
                   <label for="accum">
                     Аккумуляторные
                   </label>
@@ -178,7 +182,9 @@
               <li><a class="label-title price">По цене</a></li>
               <li><a class="label-title">По типу</a></li>
               <li><a class="label-title">По функционалу</a></li>
-              <li><a class="sort-by-increase"><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10"><path fill="#ee3643" d="M5.5 0L0 10h11z"/></svg></a></li>
+              <li><a class="sort-by-increase"><svg xmlns="http://www.w3.org/2000/svg" width="11" height="10"
+                    viewBox="0 0 11 10">
+                    <path fill="#ee3643" d="M5.5 0L0 10h11z" /></svg></a></li>
               <li><a class="sort-by-decrease"><img src="img/icon-down-dir.svg" width="11" height="10"
                     alt="Сортировка по убыванию"></a></li>
             </ul>
@@ -206,23 +212,23 @@
             </article>
             <article class="special-drill-catalog">
               <img src="img/item1.jpg" alt="Изображение перфоратора Bosch BFG 2000" width="218" height="170">
-            <h3>Перфоратор BOSCH BFG 2000</h3>
-            <del class="old-price-hidden">22500 P.</del>
-            <span>12500 P.</span>
-            <div class="small-popup-catalog">
-              <a class="button-buy" href="#">Купить</a>
-              <a class="button-book" href="#">В закладки</a>
-            </div>
+              <h3>Перфоратор BOSCH BFG 2000</h3>
+              <del class="old-price-hidden">22500 P.</del>
+              <span>12500 P.</span>
+              <div class="small-popup-catalog">
+                <a class="button-buy" href="#">Купить</a>
+                <a class="button-book" href="#">В закладки</a>
+              </div>
             </article>
             <article>
               <img src="img/item1.jpg" alt="Изображение перфоратора Bosch BFG 2000" width="218" height="170">
-            <h3>Перфоратор BOSCH BFG 2000</h3>
-            <del class="old-price-hidden">22500 P.</del>
-            <span>12500 P.</span>
-            <div class="small-popup-catalog">
-              <a class="button-buy" href="#">Купить</a>
-              <a class="button-book" href="#">В закладки</a>
-            </div>
+              <h3>Перфоратор BOSCH BFG 2000</h3>
+              <del class="old-price-hidden">22500 P.</del>
+              <span>12500 P.</span>
+              <div class="small-popup-catalog">
+                <a class="button-buy" href="#">Купить</a>
+                <a class="button-book" href="#">В закладки</a>
+              </div>
             </article>
             <article>
               <img src="img/item2.jpg" alt="Изображение перфоратора Bosch BFG 6000" width="218" height="170">
@@ -266,26 +272,27 @@
             </article>
             <article class="special-drill-catalog">
               <img src="img/item1.jpg" alt="Изображение перфоратора Bosch BFG 2000" width="218" height="170">
-            <h3>Перфоратор BOSCH BFG 2000</h3>
-            <del class="old-price-hidden">22500 P.</del>
-            <span>12500 P.</span>
-            <div class="small-popup-catalog">
-              <a class="button-buy" href="#">Купить</a>
-              <a class="button-book" href="#">В закладки</a>
-            </div>
+              <h3>Перфоратор BOSCH BFG 2000</h3>
+              <del class="old-price-hidden">22500 P.</del>
+              <span>12500 P.</span>
+              <div class="small-popup-catalog">
+                <a class="button-buy" href="#">Купить</a>
+                <a class="button-book" href="#">В закладки</a>
+              </div>
             </article>
           </div>
-            <div class="pagination">
-              <ul class="pagination-list">
-                <li class="pagination-pages">1</li>
-                <li class="pagination-pages">2</li>
-                <li class="pagination-pages">3</li>
-                <li class="pagination-pages">Следующая</li>
-              </ul>
-            </div>
+          <div class="pagination">
+            <ul class="pagination-list">
+              <li class="pagination-pages pagination-active">1</li>
+              <li class="pagination-pages">2</li>
+              <li class="pagination-pages">3</li>
+              <li class="pagination-pages">Следующая</li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
+  </section>
     <section class="epilogue">
       <div class="container">
         <h2 class="few-words">Пара слов о перфораторах</h2>
@@ -303,9 +310,9 @@
       <div class="container flex">
         <h3 class="incognito">Информация о компании</h3>
         <div class="footer-info">
-          <a class="shop-logo-footer" href='index.html'><img src="img/logo-technomart.svg" alt="Логотип «Техномарт»" width="138"
-              height="23"></a>
-          <p class="footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 <br>
+          <a class="shop-logo-footer" href='index.html'><img src="img/logo-technomart.svg" alt="Логотип «Техномарт»"
+              width="138" height="23"></a>
+          <p class="footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8 
             +7 (812) 555-05-55</p>
         </div>
         <div class="footer-nav">
@@ -338,10 +345,10 @@
           </ul>
         </div>
         <div class="academy-copyright">
-          <p class="feedback">Обратная связь: 
+          <p class="feedback">Обратная связь:
             <a class="gold-text" href="#">mail@htmlacademy.ru</a>
           </p>
-          <p class="made-by">Разработано — 
+          <p class="made-by">Разработано —
             <a class="gold-text">htmlacademy.ru</a>
           </p>
         </div>
@@ -350,18 +357,18 @@
   </footer>
   <section class="pop-buy">
     <h2 class="incognito">Всплывающая форма товар добавлен в корзину</h2>
-      <div class="buy-top">
-          <span>Товар добавлен в корзину!</span>
-      </div>
-      <div class="buy-bottom">
-          <a class="order" href="#">Оформить заказ</a>
-          <a class="continue" href="#">Продолжить покупки</a>
-      </div>
-      <button class="modal-close" type="button">
-          <span class="incognito">Закрыть</span>
-      </button>
+    <div class="buy-top">
+      <span>Товар добавлен в корзину!</span>
+    </div>
+    <div class="buy-bottom">
+      <a class="order" href="#">Оформить заказ</a>
+      <a class="continue" href="#">Продолжить покупки</a>
+    </div>
+    <button class="modal-close" type="button">
+      <span class="incognito">Закрыть</span>
+    </button>
   </section>
-  <script src="js/script.js"></script>
+  <script src="js/min-script.js"></script>
 </body>
 
 </html>
