--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="search-block">
           <form class="header-search">
             <input type="search" name="search" id="search" placeholder="Поиск:">
-            <label class="search-icon" for="search"></label>
+            <label class="search-icon" alt="Иконка поиска" for="search"></label>
           </form>
         </div>
         <ul class="header-top-menu">
@@ -41,7 +41,7 @@
         </div>
         <div class="contacts-title">
           <div class="phone-container">
-            <p class="phone-number">+7 (812) 555-05-55</p>
+            <a href="tel:+78125550555" class="phone-number">+7 (812) 555-05-55</a>
           </div>
           <p class="header-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </div>
@@ -173,7 +173,8 @@
               </div>
             </div>
           </article>
-          <article>
+          <article class="new-item">
+            <h3 class="incognito">Новый товар!</h3>
             <div class="inside-items">
               <img src="img/item1.jpg" alt="Изображение перфоратора Bosch BFG 2000" width="218" height="170">
               <h3>Перфоратор BOSCH BFG 2000</h3>
@@ -262,7 +263,6 @@
                 заработаем,<br> поднимая его на ваш этаж!
               </p>
             </li>
-            
             <li class="services-slides slide " id="slide2">
               <span class="span-header">Гарантия</span>
               <p class="service-about-2">
@@ -284,40 +284,45 @@
     </section>
     <div class="company-contacts container">
       <section class="about-us">
-          <h2>КОМПАНИЯ «ТЕХНОМАРТ»</h2>
-          <p class="about-us-p1">
-              Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
-          </p>
-          <p class="about-us-p2">
-              Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными компаниями:
-          </p>
-          <ul class="companies">
-              <li>Деловые линии</li>
-              <li>Автотрейдинг</li>
-              <li>ЖелДорЭкспедиция</li>
-          </ul>
-          <a class="details" href="#">Подробнее о компании</a>
+        <h2>КОМПАНИЯ «ТЕХНОМАРТ»</h2>
+        <p class="about-us-p1">
+          Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и строительства не оставит
+          равнодушными любителей сэкономить на гастарбайтерах.
+        </p>
+        <p class="about-us-p2">
+          Мы можем доставить ваш товар в самые отдаленные точки России! Техномарт работает со многими транспортными
+          компаниями:
+        </p>
+        <ul class="companies">
+          <li>Деловые линии</li>
+          <li>Автотрейдинг</li>
+          <li>ЖелДорЭкспедиция</li>
+        </ul>
+        <a class="details" href="#">Подробнее о компании</a>
       </section>
-
       <section class="contacts">
-          <h2>Контакты</h2>
-          <p>
-              Вы можете забрать товар сами, заехав в наш офис:
-          </p>
-          <a class="route" href="#"><img src="img/map.jpg" width="300" height="158" alt="Как к нам проехать"></a>
-          <a class="write-us" href="#">Заблудились? Напишите нам!</a>
+        <h2>Контакты</h2>
+        <p>
+          Вы можете забрать товар сами, заехав в наш офис:
+        </p>
+        <a class="route"
+          href="https://www.google.com/maps/place/%D0%91%D0%BE%D0%BB%D1%8C%D1%88%D0%B0%D1%8F+%D0%9A%D0%BE%D0%BD%D1%8E%D1%88%D0%B5%D0%BD%D0%BD%D0%B0%D1%8F+%D1%83%D0%BB.
+          ,+19,+%D0%A1%D0%B0%D0%BD%D0%BA%D1%82-%D0%9F%D0%B5%D1%82%D0%B5%D1%80%D0%B1%D1%83%D1%80%D0%B3,+191186/@59.9387942,30.3208946,17z/data=!3m1!4b1!4m5!3m4!1
+          s0x4696310fca5ba729:0xea9c53d4493c879f!8m2!3d59.9387942!4d30.3230833"><img
+            src="img/map.jpg" width="300" height="158" alt="Как к нам проехать"></a>
+        <a class="write-us" href="form.html">Заблудились? Напишите нам!</a>
       </section>
-  </div>
+    </div>
   </main>
   <footer>
     <section class="footer-up">
       <div class="container flex">
         <h3 class="incognito">Информация о компании</h3>
         <div class="footer-info">
-          <a class="shop-logo-footer" href='index.html'><img src="img/logo-technomart.svg" alt="Логотип «Техномарт»"
+          <a class="shop-logo-footer" href="index.html"><img src="img/logo-technomart.svg" alt="Логотип «Техномарт»"
               width="138" height="23"></a>
-          <p class="footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-            +7 (812) 555-05-55</p>
+          <p class="footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          <a href="tel:7812555055" class="footer-phone-number">+7 (812) 555-05-55</a>
         </div>
         <div class="footer-nav">
           <ul class="bottom-nav">
@@ -350,10 +355,10 @@
         </div>
         <div class="academy-copyright">
           <p class="feedback">Обратная связь:
-            <a class="gold-text" href="#">mail@htmlacademy.ru</a>
+            <a class="gold-text" href="mailto:htmlacademy.ru">mail@htmlacademy.ru</a>
           </p>
           <p class="made-by">Разработано —
-            <a class="gold-text">htmlacademy.ru</a>
+            <a class="gold-text" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
           </p>
         </div>
       </div>
