--- a/catalog.html
+++ b/catalog.html
@@ -24,7 +24,7 @@
         <div class="search-block">
           <form class="header-search">
             <input type="search" name="search" id="search" placeholder="Поиск:">
-            <label class="search-icon" for="search" alt="Иконка поиска"></label>
+            <label class="search-icon" for="search" aria-label="Иконка поиска"></label>
           </form>
         </div>
         <ul class="header-top-menu">
@@ -50,6 +50,7 @@
         </div>
         <div class="user-block-profile">
           <article class="user-name">
+            <h2 class="incognito">Описание профиля</h2>
             <a class="user-profile" tabindex="0">Равшан Джамшутович</a>
             <a href="#" class="user-logout" tabindex="0"></a>
           </article>
@@ -188,10 +189,10 @@
                 <li><a class="label-title price" tabindex="0">По цене</a></li>
                 <li><a class="label-title" tabindex="0">По типу</a></li>
                 <li><a class="label-title" tabindex="0">По функционалу</a></li>
-                <li><a class="sort-by-increase" alt="Сортировка по возрастанию" tabindex="0"><svg xmlns="http://www.w3.org/2000/svg"
+                <li><a class="sort-by-increase" aria-label="Сортировка по возрастанию" tabindex="0"><svg xmlns="http://www.w3.org/2000/svg"
                       width="11" height="10" viewBox="0 0 11 10">
                       <path fill="#ee3643" d="M5.5 0L0 10h11z" /></svg></a></li>
-                <li><a class="sort-by-decrease" alt="Сортировка по убыванию" tabindex="0"><img src="img/icon-down-dir.svg" width="11"
+                <li><a class="sort-by-decrease" aria-label="Сортировка по убыванию" tabindex="0"><img src="img/icon-down-dir.svg" width="11"
                       height="10" alt="Сортировка по убыванию"></a></li>
               </ul>
             </div>
@@ -348,11 +349,11 @@
           Все права защищены</p>
         <div class="social-networks">
           <ul>
-            <li><a href="#" alt="Переход на страницу Вконтакте"><img src="img/icon-vk.svg" width="26" height="15"
+            <li><a href="#" aria-label="Переход на страницу Вконтакте"><img src="img/icon-vk.svg" width="26" height="15"
                   alt="Иконка Вконтакте"></a></li>
-            <li><a href="#" alt="Переход на страницу Facebook"><img src="img/icon-fb.svg" width="12" height="22"
+            <li><a href="#" aria-label="Переход на страницу Facebook"><img src="img/icon-fb.svg" width="12" height="22"
                   alt="Иконка Facebook"></a></li>
-            <li><a href="#" alt="Переход на страницу Instagram"><img src="img/icon-insta.svg" width="21" height="21"
+            <li><a href="#" aria-label="Переход на страницу Instagram"><img src="img/icon-insta.svg" width="21" height="21"
                   alt="Иконка Instagram"></a></li>
           </ul>
         </div>
