--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="search-block">
           <form class="header-search">
             <input type="search" name="search" id="search" placeholder="Поиск:">
-            <label class="search-icon" alt="Иконка поиска" for="search"></label>
+            <label class="search-icon" for="search" aria-label="Иконка поиска"></label>
           </form>
         </div>
         <ul class="header-top-menu">
@@ -306,10 +306,8 @@
           Вы можете забрать товар сами, заехав в наш офис:
         </p>
         <a class="route"
-          href="https://www.google.com/maps/place/%D0%91%D0%BE%D0%BB%D1%8C%D1%88%D0%B0%D1%8F+%D0%9A%D0%BE%D0%BD%D1%8E%D1%88%D0%B5%D0%BD%D0%BD%D0%B0%D1%8F+%D1%83%D0%BB.
-          ,+19,+%D0%A1%D0%B0%D0%BD%D0%BA%D1%82-%D0%9F%D0%B5%D1%82%D0%B5%D1%80%D0%B1%D1%83%D1%80%D0%B3,+191186/@59.9387942,30.3208946,17z/data=!3m1!4b1!4m5!3m4!1
-          s0x4696310fca5ba729:0xea9c53d4493c879f!8m2!3d59.9387942!4d30.3230833"><img
-            src="img/map.jpg" width="300" height="158" alt="Как к нам проехать"></a>
+          href="https://goo.gl/maps/2hMkW6p4cTFoGeCJ7">
+          <img src="img/map.jpg" width="300" height="158" alt="Как к нам проехать"></a>
         <a class="write-us" href="form.html">Заблудились? Напишите нам!</a>
       </section>
     </div>
