--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="stylesheet" href="css/normalize.css" />
-  <link rel="stylesheet" href="css/min-style.css" />
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=latin,cyrillic" rel="stylesheet"
     type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Cuprum:400,400italic,700&amp;subset=latin,cyrillic"
     rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="css/normalize.css" />
+  <link rel="stylesheet" href="css/min-style.css" />
   <title>Интернет-магазин Техномарт</title>
 </head>
 
@@ -16,7 +16,7 @@
   <header class="header-page">
     <section class="header-top">
       <div class="container flex">
-        <a class="shop-logo"><img src="img/logo-technomart.svg" alt="Логотип «Техномарт»" width="109" height="19"></a>
+        <div class="shop-logo"><img src="img/logo-technomart.svg" alt="Логотип «Техномарт»" width="109" height="19"></div>
         <h1 class="incognito">Интернет-магазин Техномарт</h1>
         <div class="search-block">
           <form class="header-search">
@@ -317,8 +317,8 @@
       <div class="container flex">
         <h3 class="incognito">Информация о компании</h3>
         <div class="footer-info">
-          <a class="shop-logo-footer" href="index.html"><img src="img/logo-technomart.svg" alt="Логотип «Техномарт»"
-              width="138" height="23"></a>
+          <div class="shop-logo-footer"><img src="img/logo-technomart.svg" alt="Логотип «Техномарт»"
+              width="138" height="23"></div>
           <p class="footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           <a href="tel:7812555055" class="footer-phone-number">+7 (812) 555-05-55</a>
         </div>
