--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
   <meta charset="utf-8" />
   <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=latin,cyrillic" rel="stylesheet"
@@ -11,7 +10,6 @@
   <link rel="stylesheet" href="css/min-style.css" />
   <title>Интернет-магазин Техномарт</title>
 </head>
-
 <body class="main-page">
   <header class="header-page">
     <section class="header-top">
@@ -41,7 +39,7 @@
         </div>
         <div class="contacts-title">
           <div class="phone-container">
-            <a href="tel:+78125550555" class="phone-number">+7 (812) 555-05-55</a>
+            <a href="tel:+78125550555" class="phone-number" aria-label="Позвонить по телефону">+7 (812) 555-05-55</a>
           </div>
           <p class="header-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </div>
@@ -320,7 +318,7 @@
           <div class="shop-logo-footer"><img src="img/logo-technomart.svg" alt="Логотип «Техномарт»"
               width="138" height="23"></div>
           <p class="footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-          <a href="tel:7812555055" class="footer-phone-number">+7 (812) 555-05-55</a>
+          <a href="tel:7812555055" class="footer-phone-number" aria-label="Позвонить по телефону">+7 (812) 555-05-55</a>
         </div>
         <div class="footer-nav">
           <ul class="bottom-nav">
