--- a/catalog.html
+++ b/catalog.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ru">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,8 +28,8 @@
         </div>
         <ul class="header-top-menu">
           <li><a href="#" class="bookmarks"><span>Закладки: 0</span></a></li>
-          <li class="block-red"><a href="#" class="addtocart"><span>Корзина: 10</span></a></li>
-          <li><a href="#" class="make-order">
+          <li class="block-red"><a href="#" class="addtocart" aria-label="Добавить в корзину"><span>Корзина: 10</span></a></li>
+          <li><a href="#" class="make-order" aria-label="Оформить заказ">
               <p>Оформить заказ</p>
             </a></li>
         </ul>
@@ -44,7 +43,7 @@
         </div>
         <div class="contacts-title">
           <div class="phone-container">
-            <a href="tel:+78125550555" class="phone-number">+7 (812) 555-05-55</a>
+            <a href="tel:+78125550555" class="phone-number" aria-label="Позвонить по телефону">+7 (812) 555-05-55</a>
           </div>
           <p class="header-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </div>
@@ -52,7 +51,7 @@
           <article class="user-name">
             <h2 class="incognito">Описание профиля</h2>
             <a class="user-profile" tabindex="0">Равшан Джамшутович</a>
-            <a href="#" class="user-logout" tabindex="0"></a>
+            <a href="#" class="user-logout" tabindex="0" aria-label="Выйти из профиля"></a>
           </article>
           <article>
             <h2 class="incognito">Блок с заказами и личным кабинетом</h2>
@@ -86,7 +85,7 @@
     <section class="main-catalog-section">
       <div class="container">
         <ul class="breadcrumbscatalog">
-          <li><a href="index.html"><img src="img/icon-home.svg" alt="Иконка домой" width="14" height="12"></a></li>
+          <li><a href="index.html" aria-label="Переход на главную страницу"><img src="img/icon-home.svg" alt="Иконка домой" width="14" height="12"></a></li>
           <li><a href="#">Каталог</a></li>
           <li><a href="#">Инструмент</a></li>
           <li><a href="#" class="selected">Перфораторы</a></li>
@@ -323,7 +322,7 @@
           <a class="shop-logo-footer" href="index.html"><img src="img/logo-technomart.svg" alt="Логотип «Техномарт»"
               width="138" height="23"></a>
           <p class="footer-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-          <a href="tel:7812555055" class="footer-phone-number">+7 (812) 555-05-55</a>
+          <a href="tel:7812555055" class="footer-phone-number" aria-label="Позвонить по телефону">+7 (812) 555-05-55</a>
         </div>
         <div class="footer-nav">
           <ul class="bottom-nav">
@@ -383,5 +382,4 @@
   </section>
   <script src="js/min-script.js"></script>
 </body>
-
 </html>
